--- a/notebooks/Parsing Big Endian Data.ipynb
+++ b/notebooks/Parsing Big Endian Data.ipynb
@@ -2,47 +2,219 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/Dev/ROOTIO/Project.toml`\n"
+      "\u001b[32m\u001b[1mActivating\u001b[22m\u001b[39m environment at `~/Dev/ROOTIO.jl/Project.toml`\n"
      ]
     }
    ],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\".\")\n",
+    "Pkg.activate(\"..\")\n",
     "\n",
-    "using BenchmarkTools"
+    "using BenchmarkTools\n",
+    "using StaticArrays\n",
+    "using ROOTIO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOTIO.@io struct Foo\n",
+    "    a::Int32\n",
+    "    b::Int64\n",
+    "    c::Float32\n",
+    "    d::SVector{5, UInt8}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling ROOTIO [3cd96dde-e98d-4713-81e9-a4a1b0235ce9]\n",
-      "└ @ Base loading.jl:1273\n"
-     ]
+     "data": {
+      "text/plain": [
+       "IOBuffer(data=UInt8[...], readable=true, writable=false, seekable=true, append=false, size=21, maxsize=Inf, ptr=1, mark=-1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "using ROOTIO"
+    "buf = IOBuffer(Vector{UInt8}(1:sizeof(Foo)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Foo(16909060, 361984551142689548, 4.377526f-31, UInt8[0x11, 0x12, 0x13, 0x14, 0x15])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo = ROOTIO.unpack(buf, Foo)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /Users/tamasgal/.julia/compiled/v1.2/ROOTIO/koyqt.ji for ROOTIO [3cd96dde-e98d-4713-81e9-a4a1b0235ce9]\n",
+      "└ @ Base loading.jl:1240\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[:(SVector{4, UInt8}), :Int32, :Int32, :UInt32, :UInt32, :Int32, :Int32, :Int32, :UInt8, :Int32, :UInt32, :Int32, :(SVector{18, UInt8})]\n",
+      "SVector{4, UInt8}\n",
+      "Expr\n",
+      "Int32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "UInt32\n",
+      "Symbol\n",
+      "UInt32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "UInt8\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "UInt32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "SVector{18, UInt8}\n",
+      "Expr\n",
+      "Any[:(read(io, sizeof(SVector{4, UInt8}))), :(ntoh(read(io, Int32))), :(ntoh(read(io, Int32))), :(ntoh(read(io, UInt32))), :(ntoh(read(io, UInt32))), :(ntoh(read(io, Int32))), :(ntoh(read(io, Int32))), :(ntoh(read(io, Int32))), :(ntoh(read(io, UInt8))), :(ntoh(read(io, Int32))), :(ntoh(read(io, UInt32))), :(ntoh(read(io, Int32))), :(read(io, sizeof(SVector{18, UInt8})))]"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[:Int32, :Float32, :(SVector{4, UInt8})]\n",
+      "Int32\n",
+      "Symbol\n",
+      "Float32\n",
+      "Symbol\n",
+      "SVector{4, UInt8}\n",
+      "Expr\n",
+      "Any[:(ntoh(read(io, Int32))), :(ntoh(read(io, Float32))), :(read(io, sizeof(SVector{4, UInt8})))]"
+     ]
+    }
+   ],
+   "source": [
+    "@ROOTIO.io struct Bar\n",
+    "    a::Int32\n",
+    "    b::Float32\n",
+    "    c::SVector{4, UInt8}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[:Int32, :Float32, :(SVector{4, UInt16})]\n",
+      "Int32\n",
+      "Symbol\n",
+      "Float32\n",
+      "Symbol\n",
+      "SVector{4, UInt16}\n",
+      "Expr\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "No parser found for type SVector{4, UInt16}",
+     "output_type": "error",
+     "traceback": [
+      "No parser found for type SVector{4, UInt16}",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] @io(::LineNumberNode, ::Module, ::Any) at /Users/tamasgal/Dev/ROOTIO.jl/src/io.jl:22"
+     ]
+    }
+   ],
+   "source": [
+    "@ROOTIO.io struct Baz\n",
+    "    a::Int32\n",
+    "    b::Float32\n",
+    "    c::SVector{4, UInt16}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[:Int32, :Int32, :Float32, :Int32]\n",
+      "Int32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "Float32\n",
+      "Symbol\n",
+      "Int32\n",
+      "Symbol\n",
+      "Any[:(ntoh(read(io, Int32))), :(ntoh(read(io, Int32))), :(ntoh(read(io, Float32))), :(ntoh(read(io, Int32)))]"
+     ]
+    }
+   ],
    "source": [
     "@ROOTIO.io struct Foo\n",
     "    a::Int32\n",
@@ -54,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +235,7 @@
        "Foo(1, 2, 3.0f0, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +264,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "UndefVarError",
-     "evalue": "UndefVarError: types not defined",
+     "evalue": "UndefVarError: buf not defined",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: types not defined",
+      "UndefVarError: buf not defined",
       "",
       "Stacktrace:",
-      " [1] unpack(::Base.GenericIOBuffer{Array{UInt8,1}}, ::Type{Foo}) at /home/tgal/Dev/ROOTIO/src/io.jl:16",
-      " [2] top-level scope at In[7]:1"
+      " [1] top-level scope at In[14]:1"
      ]
+    }
+   ],
+   "source": [
+    "read(buf, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IOBuffer(data=UInt8[...], readable=true, writable=false, seekable=true, append=false, size=1000000000, maxsize=Inf, ptr=5, mark=-1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "buf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Foo(769902277, 877929864, -1.9601652f-14, 917802855)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,33 +325,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: types not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: types not defined",
-      "",
-      "Stacktrace:",
-      " [1] unpack(::Base.GenericIOBuffer{Array{UInt8,1}}, ::Type{Foo}) at /home/tgal/Dev/ROOTIO/src/io.jl:16",
-      " [2] ##core#409(::Base.GenericIOBuffer{Array{UInt8,1}}) at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:297",
-      " [3] ##sample#410(::BenchmarkTools.Parameters) at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:303",
-      " [4] #_run#7(::Bool, ::String, ::Base.Iterators.Pairs{Symbol,Integer,NTuple{4,Symbol},NamedTuple{(:samples, :evals, :gctrial, :gcsample),Tuple{Int64,Int64,Bool,Bool}}}, ::typeof(BenchmarkTools._run), ::BenchmarkTools.Benchmark{Symbol(\"##benchmark#408\")}, ::BenchmarkTools.Parameters) at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:331",
-      " [5] (::Base.var\"#inner#2\"{Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}},typeof(BenchmarkTools._run),Tuple{BenchmarkTools.Benchmark{Symbol(\"##benchmark#408\")},BenchmarkTools.Parameters}})() at ./none:0",
-      " [6] #invokelatest#1 at ./essentials.jl:713 [inlined]",
-      " [7] #invokelatest at ./none:0 [inlined]",
-      " [8] #run_result#37 at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:32 [inlined]",
-      " [9] #run_result at ./none:0 [inlined]",
-      " [10] #run#39(::Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}}, ::typeof(run), ::BenchmarkTools.Benchmark{Symbol(\"##benchmark#408\")}, ::BenchmarkTools.Parameters) at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:46",
-      " [11] #run at ./none:0 [inlined] (repeats 2 times)",
-      " [12] #warmup#42 at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:79 [inlined]",
-      " [13] warmup(::BenchmarkTools.Benchmark{Symbol(\"##benchmark#408\")}) at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:79",
-      " [14] top-level scope at /home/tgal/.julia/packages/BenchmarkTools/7aqwe/src/execution.jl:390",
-      " [15] top-level scope at In[8]:1"
+     "data": {
+      "text/plain": [
+       "Bar(-1787811434, -2.3025051f-10, UInt8[0x5b, 0x6e, 0x2e, 0x63])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ROOTIO.unpack(IOBuffer(rand(UInt8, 1000)), Bar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  8.548 ns (0 allocations: 0 bytes)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Foo(228380471, -1642559088, -3.3711032f30, 2050440449)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -149,25 +372,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  10.999 ns (1 allocation: 64 bytes)\n"
+      "  45.611 ns (2 allocations: 96 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Foo(543217594, 1640246230, 3.3872068f-33, 1564409259)"
+       "Bar(1947119411, -1.2519076f10, UInt8[0x96, 0x62, 0xaf, 0x54])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@btime ROOTIO.unpack($buf, Bar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: retrieve_big_endian_32_foo_hardcoded_using_ntoh not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: retrieve_big_endian_32_foo_hardcoded_using_ntoh not defined",
+      "",
+      "Stacktrace:",
+      " [1] ##core#388(::Array{UInt8,1}) at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:371",
+      " [2] ##sample#389(::BenchmarkTools.Parameters) at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:377",
+      " [3] #_run#4(::Bool, ::String, ::Base.Iterators.Pairs{Symbol,Integer,NTuple{4,Symbol},NamedTuple{(:samples, :evals, :gctrial, :gcsample),Tuple{Int64,Int64,Bool,Bool}}}, ::typeof(BenchmarkTools._run), ::BenchmarkTools.Benchmark{Symbol(\"##benchmark#387\")}, ::BenchmarkTools.Parameters) at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:405",
+      " [4] (::getfield(Base, Symbol(\"#inner#2\")){Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}},typeof(BenchmarkTools._run),Tuple{BenchmarkTools.Benchmark{Symbol(\"##benchmark#387\")},BenchmarkTools.Parameters}})() at ./none:0",
+      " [5] #invokelatest#1 at ./essentials.jl:794 [inlined]",
+      " [6] #invokelatest at ./none:0 [inlined]",
+      " [7] #run_result#37 at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:32 [inlined]",
+      " [8] #run_result at ./none:0 [inlined]",
+      " [9] #run#40(::Nothing, ::Float64, ::Float64, ::Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}}, ::typeof(run), ::BenchmarkTools.Benchmark{Symbol(\"##benchmark#387\")}, ::BenchmarkTools.Parameters) at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:94",
+      " [10] #run at ./none:0 [inlined] (repeats 2 times)",
+      " [11] #warmup#45 at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:141 [inlined]",
+      " [12] warmup(::BenchmarkTools.Benchmark{Symbol(\"##benchmark#387\")}) at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:141",
+      " [13] top-level scope at /Users/tamasgal/.julia/packages/BenchmarkTools/eCEpo/src/execution.jl:481",
+      " [14] top-level scope at In[15]:1"
+     ]
     }
    ],
    "source": [
@@ -433,15 +690,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.2.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.2"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
