add performance citation

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,6 +11,17 @@
   eprint = {https://doi.org/10.1137/141000671}
 }
 
+@article{JuliaPerformance,
+  title={Performance of julia for high energy physics analyses},
+  author={Stanitzki, Marcel and Strube, Jan},
+  journal={Computing and Software for Big Science},
+  volume={5},
+  number={1},
+  pages={1--11},
+  year={2021},
+  publisher={Springer}
+}
+
 @software{jim_pivarski_2021_5539722,
   author       = {Jim Pivarski and
                   Henry Schreiner and
