--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -86,3 +86,13 @@
     doi          = {10.5281/zenodo.3509134},
     url          = {https://doi.org/10.5281/zenodo.3509134}
 }
+@article{Brun:1997pa,
+    author = "Brun, R. and Rademakers, F.",
+    editor = "Werlen, M. and Perret-Gallix, D.",
+    title = "{ROOT: An object oriented data analysis framework}",
+    doi = "10.1016/S0168-9002(97)00048-X",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "389",
+    pages = "81--86",
+    year = "1997"
+}
