Add NanoAOD refernce

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -130,3 +130,14 @@
 	title = {Letter of intent for {KM}3NeT 2.0},
 	journal = {Journal of Physics G: Nuclear and Particle Physics}
 }
+@article{Ehataht:2020ebp,
+    author = {Ehat\"aht, Karl},
+    editor = "Doglioni, C. and Kim, D. and Stewart, G. A. and Silvestris, L. and Jackson, P. and Kamleh, W.",
+    collaboration = "CMS",
+    title = "{NANOAOD: a new compact event data format in CMS}",
+    doi = "10.1051/epjconf/202024506002",
+    journal = "EPJ Web Conf.",
+    volume = "245",
+    pages = "06002",
+    year = "2020"
+}
