Fix pandas reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -96,8 +96,8 @@
  url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
 @software{reback2020pandas,
-    author       = {The pandas development team},
-    title        = {pandas-dev/pandas: Pandas},
+    author       = {{The pandas development team}},
+    title        = {Pandas},
     month        = feb,
     year         = 2020,
     publisher    = {Zenodo},
